<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="404dp"
        android:layout_height="821dp"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/bg2"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-8dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/restorder"
        android:textAlignment="center"
        android:textColor="@color/NavajoWhite"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textColor="@color/Beige"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316"
        />

    <EditText
        android:id="@+id/username"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:hint="@string/user_name"
        android:textColorHint="@color/FloralWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintWidth_percent=".8"/>

    <EditText
        android:textColor="@color/white"
        android:id="@+id/passwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_key_24"
        android:drawablePadding="13dp"
        android:hint="@string/password"
        android:textColorHint="@color/FloralWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:textColor="@color/white"
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="13dp"
        android:hint="@string/email_address"
        android:textColorHint="@color/FloralWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:background="@drawable/btn_bg_design"
        android:onClick="log_inC"
        android:padding="14dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwd"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_registered"
        android:textAlignment="center"
        android:textColor="@color/WhiteSmoke"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:onClick="log_inC"
        android:textAlignment="center"
        android:textColor="@color/IndianRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />


</androidx.constraintlayout.widget.ConstraintLayout>