<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageActivity"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/bg2"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/lobster"
        android:text="@string/restorder"
        android:textAlignment="center"
        android:textColor="@color/NavajoWhite"
        android:textSize="33sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview1"
        android:text="@string/language"
        android:textColor="@color/WhiteSmoke"
        android:textSize="20sp"/>


    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/shape_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="----"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            android:layout_marginRight="10dp"/>


    </RelativeLayout>

    <Button
        android:id="@+id/bNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn_bg_design"
        android:gravity="center"
        android:onClick="welcome"
        android:text="@string/next" />


</LinearLayout>